--- a/demo/example_config/httpd.conf
+++ b/demo/example_config/httpd.conf
@@ -22,12 +22,12 @@ ErrorLog logs/error.log
 LogLevel warn
 
 #LoadModule access_compat_module modules/mod_access_compat.so
-LoadModule actions_module modules/mod_actions.so
-LoadModule alias_module modules/mod_alias.so
+#LoadModule actions_module modules/mod_actions.so
+#LoadModule alias_module modules/mod_alias.so
 LoadModule allowmethods_module modules/mod_allowmethods.so
-LoadModule asis_module modules/mod_asis.so
-LoadModule auth_basic_module modules/mod_auth_basic.so
-#LoadModule auth_digest_module modules/mod_auth_digest.so
+#LoadModule asis_module modules/mod_asis.so
+#LoadModule auth_basic_module modules/mod_auth_basic.so
+LoadModule auth_digest_module modules/mod_auth_digest.so
 #LoadModule auth_form_module modules/mod_auth_form.so
 #LoadModule authn_anon_module modules/mod_authn_anon.so
 LoadModule authn_core_module modules/mod_authn_core.so
