--- a/demo/example_config/httpd.conf
+++ b/demo/example_config/httpd.conf
@@ -21,37 +21,37 @@ ErrorLog logs/error.log
 
 LogLevel warn
 
-#LoadModule access_compat_module modules/mod_access_compat.so
+LoadModule access_compat_module modules/mod_access_compat.so
 #LoadModule actions_module modules/mod_actions.so
 #LoadModule alias_module modules/mod_alias.so
 LoadModule allowmethods_module modules/mod_allowmethods.so
 #LoadModule asis_module modules/mod_asis.so
 #LoadModule auth_basic_module modules/mod_auth_basic.so
 LoadModule auth_digest_module modules/mod_auth_digest.so
-#LoadModule auth_form_module modules/mod_auth_form.so
-#LoadModule authn_anon_module modules/mod_authn_anon.so
-LoadModule authn_core_module modules/mod_authn_core.so
+LoadModule auth_form_module modules/mod_auth_form.so
+LoadModule authn_anon_module modules/mod_authn_anon.so
+#LoadModule authn_core_module modules/mod_authn_core.so
 #LoadModule authn_dbd_module modules/mod_authn_dbd.so
-#LoadModule authn_dbm_module modules/mod_authn_dbm.so
-LoadModule authn_file_module modules/mod_authn_file.so
+LoadModule authn_dbm_module modules/mod_authn_dbm.so
+#LoadModule authn_file_module modules/mod_authn_file.so
 #LoadModule authn_socache_module modules/mod_authn_socache.so
 #LoadModule authnz_fcgi_module modules/mod_authnz_fcgi.so
 #LoadModule authnz_ldap_module modules/mod_authnz_ldap.so
-LoadModule authz_core_module modules/mod_authz_core.so
+#LoadModule authz_core_module modules/mod_authz_core.so
 #LoadModule authz_dbd_module modules/mod_authz_dbd.so
 #LoadModule authz_dbm_module modules/mod_authz_dbm.so
-LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
+#LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
 LoadModule authz_host_module modules/mod_authz_host.so
 #LoadModule authz_owner_module modules/mod_authz_owner.so
-LoadModule authz_user_module modules/mod_authz_user.so
-LoadModule autoindex_module modules/mod_autoindex.so
+#LoadModule authz_user_module modules/mod_authz_user.so
+#LoadModule autoindex_module modules/mod_autoindex.so
 #LoadModule brotli_module modules/mod_brotli.so
 #LoadModule buffer_module modules/mod_buffer.so
 #LoadModule cache_module modules/mod_cache.so
 #LoadModule cache_disk_module modules/mod_cache_disk.so
 #LoadModule cache_socache_module modules/mod_cache_socache.so
 #LoadModule cern_meta_module modules/mod_cern_meta.so
-LoadModule cgi_module modules/mod_cgi.so
+#LoadModule cgi_module modules/mod_cgi.so
 #LoadModule charset_lite_module modules/mod_charset_lite.so
 #LoadModule data_module modules/mod_data.so
 #LoadModule dav_module modules/mod_dav.so
@@ -59,7 +59,7 @@ LoadModule cgi_module modules/mod_cgi.so
 #LoadModule dav_lock_module modules/mod_dav_lock.so
 #LoadModule dbd_module modules/mod_dbd.so
 #LoadModule deflate_module modules/mod_deflate.so
-LoadModule dir_module modules/mod_dir.so
+#LoadModule dir_module modules/mod_dir.so
 #LoadModule dumpio_module modules/mod_dumpio.so
 LoadModule env_module modules/mod_env.so
 #LoadModule expires_module modules/mod_expires.so
@@ -72,8 +72,8 @@ LoadModule env_module modules/mod_env.so
 #LoadModule heartmonitor_module modules/mod_heartmonitor.so
 #LoadModule ident_module modules/mod_ident.so
 #LoadModule imagemap_module modules/mod_imagemap.so
-LoadModule include_module modules/mod_include.so
-LoadModule info_module modules/mod_info.so
+#LoadModule include_module modules/mod_include.so
+#LoadModule info_module modules/mod_info.so
 LoadModule isapi_module modules/mod_isapi.so
 #LoadModule lbmethod_bybusyness_module modules/mod_lbmethod_bybusyness.so
 #LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
@@ -115,7 +115,7 @@ LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule session_cookie_module modules/mod_session_cookie.so
 #LoadModule session_crypto_module modules/mod_session_crypto.so
 #LoadModule session_dbd_module modules/mod_session_dbd.so
-LoadModule setenvif_module modules/mod_setenvif.so
+#LoadModule setenvif_module modules/mod_setenvif.so
 #LoadModule slotmem_plain_module modules/mod_slotmem_plain.so
 #LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
 #LoadModule socache_dbm_module modules/mod_socache_dbm.so
